--- a/backend/.env
+++ b/backend/.env
@@ -5,9 +5,18 @@ API_V1_PREFIX="/api/v1"
 
 # Database
 DATABASE_URL=postgresql://postgres:password@localhost:5432/trade_finance
-DATABASE_POOL_SIZE=20
-DATABASE_MAX_OVERFLOW=10
+
+# JWT Authentication
+SECRET_KEY=your-secret-key-change-this-in-production-min-32-characters
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+
+# S3 / Object Storage
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=trade-finance-documents
+S3_ENDPOINT_URL=http://localhost:9000
 
 # CORS (for frontend)
-CORS_ORIGINS=["*"]
-# CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
