--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,26 @@ uvicorn[standard]==0.27.0
 # Database
 sqlalchemy==2.0.25
 psycopg2-binary==2.9.9
+alembic==1.13.1
 
-# Configuration
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.6
+
+# Environment Management
 python-dotenv==1.0.0
+
+# File Upload & Storage
+boto3==1.34.22
+python-magic==0.4.27
+
+# Validation
 pydantic==2.5.3
 pydantic-settings==2.1.0
+email-validator==2.1.0
+
+# Development & Testing
+pytest==7.4.4
+pytest-asyncio==0.23.3
+httpx==0.26.0
