Add user_code, DB wait script, and docs overhaul
Add a system-wide 6-char user_code and related plumbing: new Alembic migration (006_add_user_code.py) that adds, backfills and enforces a unique user_code column for existing users; new user utility (app/utils/user_utils.py) to generate unique codes; model and schema updates to include user_code; AuthService and admin user creation now assign user_code. Improve admin deletion flow to remove dependent records in a safe order to avoid FK constraints. Add a database wait-and-migrate script (backend/wait-for-db.sh), update backend Dockerfile to use it, and expose Postgres-related env vars in docker-compose.yml. Large README rewrite and cleanup of old docs, plus several frontend component/type/service updates and a new AdminTradeManagement component and utils entry — overall documentation and UX/content refresh.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,5 +19,9 @@ COPY . .
 # Expose port
 EXPOSE 8000
 
-# Run migrations and start server
-CMD alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000
+# Copy and set up the wait script
+COPY wait-for-db.sh /app/wait-for-db.sh
+RUN chmod +x /app/wait-for-db.sh
+
+# Use the wait script
+CMD ["/bin/bash", "/app/wait-for-db.sh"]
