--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,10 @@ services:
         condition: service_healthy
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/trade_finance
+      POSTGRES_HOST: postgres
+      POSTGRES_PORT: 5432
+      POSTGRES_USER: postgres
+      POSTGRES_DB: trade_finance
       SECRET_KEY: your-secret-key-change-this-in-production-min-32-characters
       ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 15
