--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,10 +17,10 @@
         "noEmit": true,
         "jsx": "react-jsx",
         /* Linting */
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "strict": true
+        // "noUnusedLocals": true,
+        // "noUnusedParameters": true,
+        // "noFallthroughCasesInSwitch": true
     },
     "include": [
         "src"
