--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
       AWS_REGION: us-east-1
       S3_BUCKET_NAME: trade-finance-documents
       S3_ENDPOINT_URL: http://minio:9000
+      S3_PUBLIC_ENDPOINT_URL: http://localhost:9400
       CORS_ORIGINS: '["http://localhost:3000","http://localhost:5173","http://localhost:80","http://localhost"]'
       DEBUG: "True"
     ports:
