Add admin/auditor APIs, org models, migrations
Introduce admin and auditor functionality and supporting models/migrations. Added two Alembic revisions to create organizations and compliance_alerts tables. Implemented extensive admin API changes (organization management, user lifecycle, role/permission matrix, ledger views, audit logs, analytics and integrity alerts) and a new auditor API (document verification, ledger timeline, trade review, alerts, reporting). Added organization and compliance_alert models/schemas/services, multiple frontend admin/auditor pages/components and client services/types, documentation files (API_REFERENCE, ARCHITECTURE, README, etc.), and updated .gitignore. Removed obsolete test/verify scripts. Overall this commit wires backend migrations, models, APIs, and frontend UI to support org management, auditing and compliance workflows.

--- a/.gitignore
+++ b/.gitignore
@@ -28,12 +28,20 @@ wheels/
 .installed.cfg
 *.egg
 
+# Testing & Coverage
+.coverage
+htmlcov/
+.pytest_cache/
+coverage.xml
+
 # Node
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+dist/
+build/
 
 # IDE
 .vscode/
@@ -45,6 +53,9 @@ yarn-error.log*
 # OS
 .DS_Store
 Thumbs.db
+.Desktop
+.VolumeIcon.icns
+Icon?
 
 # Logs
 *.log
@@ -62,9 +73,16 @@ secrets.md
 *.secret
 *.key
 *.pem
+*.pfx
+.ssh/
 
 # Docker
 docker-compose.override.yml
+.dockerignore
+
+# Agent internal files (do not commit session data)
+.agent/
+.agent
 
 # Alembic
 alembic/versions/*.pyc
