--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
@@ -14,7 +14,8 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
         "axios": "^1.6.5",
-        "jwt-decode": "^4.0.0"
+        "jwt-decode": "^4.0.0",
+        "lucide-react": "^0.263.1"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
