Add dos2unix and harden wait-for-db script
Install dos2unix in the backend image and normalize the wait-for-db script line endings (RUN dos2unix /app/wait-for-db.sh) so it runs reliably in the container. Replace the script shebang with /bin/sh and switch to an until pg_isready loop with sane defaults and clearer logging/sleep intervals for more robust DB readiness checks. Also remove the now-unnecessary seed_log.txt file.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     postgresql-client \
+    dos2unix \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements
@@ -21,6 +22,7 @@ EXPOSE 8000
 
 # Copy and set up the wait script
 COPY wait-for-db.sh /app/wait-for-db.sh
+RUN dos2unix /app/wait-for-db.sh
 RUN chmod +x /app/wait-for-db.sh
 
 # Use the wait script
