Revise README and add docs; docker tweak
Overhaul README to improve onboarding and Quick Start (clarified overview, roles, workflows, API highlights, tech stack, seed instructions and default test credentials). Add comprehensive documentation under docs/: DEMO_EXPLANATION.md, DEMO_PRESENTATION_GUIDE.md, SYSTEM_TECHNICAL_DOCUMENTATION.md, TECHNICAL_DOCUMENTATION.md and a placeholder TECHNICAL_QA.md to support demos, presentations and developer-level system/technical references. Minor update to docs/SYSTEM_PRESENTATION.md trade status wording. Add a docker-compose backend command to normalize line endings and run the wait-for-db.sh startup script (dos2unix && /bin/bash /app/wait-for-db.sh) to improve container startup reliability across platforms.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ services:
         condition: service_healthy
       minio:
         condition: service_healthy
+    command: /bin/bash -c "dos2unix /app/wait-for-db.sh && /bin/bash /app/wait-for-db.sh"
     environment:
       DATABASE_URL: postgresql://postgres:password@postgres:5432/trade_finance
       POSTGRES_HOST: postgres
