--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,5 +4,5 @@ services:
     env: python
     plan: free
     rootDir: backend
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r backend/requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
